# rando

./: .gitignore  Cargo.toml
src/: config.rs  lib.rs  logic.rs  main.rs  writing.rs
src/logic/: checks.rs  drop.rs  locations.rs  music.rs  seeding.rs  tricks.rs
src/writing/: music.rs  overworld.rs
