[package]
name = "pseudoregalia-rando"
description = "a gamemode for pseudoregalia which shuffles pickups"
repository = "https://github.com/pseudoregalia-modding/pseudoregalia-rando"
version = "1.8.4"
authors = ["spuds"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow", "persistence"] }
unreal_asset = { git = "https://github.com/astrotechies/unrealmodding", rev = "b64d3f4" }
repak = { git = "https://github.com/trumank/repak", rev = "abda6da", features = ["oodle"] }
strum = { version = "0.25", features = ["derive"] }
rand = "0.8"
egui-modal = "0.3"
rfd = "0.11"
thiserror = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.21"

[build-dependencies]
winres = "0.1"

[profile.dev.package."*"]
opt-level = 3
