[package]
name = "pseudoregalia-rando"
description = "a gamemode for pseudoregalia which shuffles pickups"
repository = "https://github.com/pseudoregalia-modding/pseudoregalia-rando"
version = "1.8.4"
authors = ["spuds"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
unreal_asset = { git = "https://github.com/astrotechies/unrealmodding", rev = "b64d3f4" }
repak = { git = "https://github.com/trumank/repak", rev = "abda6da", features = ["oodle"] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.37", features = ["derive"] }

[build-dependencies]
winres = "0.1"

[profile.dev.package."*"]
opt-level = 3
